Slight changes made in html files and hist plot in jupyter file

--- a/templates/predict.html
+++ b/templates/predict.html
@@ -76,7 +76,7 @@
           <a href="predict.html" class="logo d-flex align-items-center me-auto me-lg-0">
             <!-- Uncomment the line below if you also wish to use an image logo -->
             <!-- <img src="static/img/logo.png" alt=""> -->
-            <h1>Body<span>Fat Prediction</span></h1>
+            <h1>Body<span>FatPrediction.</span></h1>
           </a>
           <a class="btn-book-a-table" href="/" title="Click here to return to home page" onclick="showLoadingAnimation()">Home</a>
           <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
