--- a/templates/fat_predict.html
+++ b/templates/fat_predict.html
@@ -2,32 +2,29 @@
 <html lang="en">
 <head>
     <style>
-        .loader {
-          position: fixed;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          background-color: rgba(255, 255, 255, 0.8);
-          z-index: 9999;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          font-size: 2rem;
-          font-weight: bold;
-        }
 
-
-        .summary-content {
-        border-radius: 25px;
-            }
-        .summary-chevron-up {
-        border-radius: 50%;
+      .loader {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.8);
+      z-index: 9999;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 2rem;
+      font-weight: bold;
             }
 
-            body {
-        background-image: url('static/img/back-view.jpg');
-                }
+            .summary-content {
+            border-radius: 25px;
+                   }
+            .summary-chevron-up {
+            border-radius: 50%;
+              }
+
       </style>
     
       <meta charset="utf-8">
@@ -61,6 +58,7 @@
         <link href="static/css/main.css" rel="stylesheet">
 </head>
 <body>
+
     <!-- ======= Header ======= -->
     <header id="header" class="header fixed-top d-flex align-items-center">
         <div class="container d-flex align-items-center justify-content-between">
@@ -68,7 +66,7 @@
           <a href="fat_predict.html" class="logo d-flex align-items-center me-auto me-lg-0">
             <!-- Uncomment the line below if you also wish to use an image logo -->
             <!-- <img src="static/img/logo.png" alt=""> -->
-            <h1>Body<span>Fat.</span></h1>
+            <h1>Body<span>FatPrediction.</span></h1>
           </a>
           <a class="btn-book-a-table" href="/predict" title="Click here to return to home page" onclick="showLoadingAnimation()">Prediction Page</a>
           <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
