--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Yummy Bootstrap Template - Index</title>
+  <title>Welcome to BodyFat Prediction</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -66,7 +66,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="static/img/logo.png" alt=""> -->
-        <h1>BodyFat<span>.</span></h1>
+        <h1>Body<span>FatPrediction.</span></h1>
       </a>
 
       <nav id="navbar" class="navbar">
